--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Example</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Example</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body class="m-a-1">
-  <paMessages></paMessages>
-  <div class="col-xs-8 p-a-1">
-  	<paTable></paTable>
-  </div>
-  <div class="col-xs-4 p-a-1">
-  	<paForm></paForm>
-  </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body class="m-a-1">
+    <app></app>
   </body>
 </html>
